exec stringarray instead of string, java-21 deprecation.